# onnxpartitioner

./: .gitignore  README.md  _buffer.py  _check_conv_partitioner.py  _conv_partitioner.py  check.py  common.py  generate_models.py  partitioner.py  pyproject.toml
src/onnxpartitioner/: _check_conv_partitioner.py  _conv_partitioner.py  common.py  graphsurgeon_utils.py  modelproto_utils.py  partitioner.py
tests/: _check_conv_partitioner.py  check.py  compare.py  generate_models.py
