[project]
name = "onnxpartitioner"
version = "0.1.0"
dependencies = [
  "numpy>=1.8.0",
  "onnx>=1.12.0",
  "onnx-graphsurgeon>=0.5.0",
  "torch>=2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
onnxpartitioner = "onnxpartitioner.partitioner:main"

[project.optional-dependencies]
dev = [
  "torchinfo",
  "termcolor",
  "tqdm",
]